(fix): z-index of social icons

--- a/app/src/components/social-icons/social-icons.scss
+++ b/app/src/components/social-icons/social-icons.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   top:30%;
   right:0;
+  z-index:100;
 
   @media screen and (max-width: $max-mobile){
     flex-direction: row;
